# swagger_server/controllers/gfe_notation_controller.py
@@ -1,0 +1,23 @@
+from Bio import SeqIO
+from BioSQL import BioSeqDatabase
+from seqann.sequence_annotation import BioSeqAnn
+from pygfe.pygfe import pyGFE
+from seqann.gfe import GFE
+
+
+def gfeNotation_post(sequence, locus, gene):
+    kir = gene
+    sequence = sequence['sequence']
+    server = BioSeqDatabase.open_database(driver="pymysql", user="root",
+                                          passwd="my-secret-pw", host="0.0.0.0",
+                                          db="bioseqdb", port=3306)
+    gfe = GFE()
+    if kir:
+        seqann = BioSeqAnn(server=server, kir=kir)
+    else:
+        seqann = BioSeqAnn(server=server)
+    annotation = seqann.annotate(sequence)
+    features, gfe = gfe.get_gfe(annotation, locus)
+    return {
+        'gfe': gfe
+    }
